--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -2,7 +2,7 @@
 <idea-plugin>
     <!-- Unique identifier of the plugin. It should be FQN. It cannot be changed between the plugin versions. -->
     <id>YapiResultGenerate</id>
-    <version>1.1.3</version>
+    <version>1.1.4</version>
     <depends>com.intellij.modules.java</depends>
     <!-- Product and plugin compatibility requirements.
      Read more: https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
@@ -12,7 +12,7 @@
     <!-- Public plugin name should be written in Title Case.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-name -->
     <!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
-    <vendor email="l1401098954@gmail.com" url="https://github.com/LiuGuanXin/YapiGenerate">yapi</vendor>
+    <vendor email="l1401098954@gmail.com" url="https://github.com/LiuGuanXin/YapiGenerate">刘广鑫</vendor>
     <name>Yapi Generate</name>
 
     <!-- Description of the plugin displayed on the Plugin Page and IDE Plugin Manager.
@@ -45,11 +45,50 @@
 
     <b>Note / 注意：</b><br>
     Mock 数据的生成依赖大语言模型（LLM）支持，请在设置中配置 API Key。<br>
-    配置路径：<b>Settings -> Tools -> yapi_setting</b>
+        <b>支持额外参数配置，有些设计会在拦截器中拦截部分参数，可添加路径匹配，为特定路径添加固定参数</b> <br>
+    <b>参数示例：</b><br>
+   <ol><li><b>
+                {
+                    "pathMatch" : "/api/**",
+                    "extraParams" : [
+                      {
+                        "name":"timestamp",
+                        "required":"1",
+                        "example":"123",
+                        "desc":"时间戳"
+                      },
+                      {
+                        "name":"nonce",
+                        "required":"1",
+                        "example":"123",
+                        "desc":"随机长整型"
+                      },
+                      {
+                        "name":"signature",
+                        "required":"1",
+                        "example":"77B27281779BD60CAE952FA1232368D2",
+                        "desc":"签名"
+                      },
+                      {
+                        "name":"accessToken",
+                        "required":"1",
+                        "example":"5d622aea8221e150fcede59823e84e10",
+                        "desc":"访问令牌"
+                      }
+                    ]
+                }
+    </b></li></ol>
+    配置路径：<b>Settings -> Tools -> yapi_setting</b> <br>
     </em>
     ]]></description>
 
-
+    <change-notes><![CDATA[
+        <ul>
+            <li><b>优化返回结果的通用性解析</b></li>
+            <li><b>重写mock数据生成方法</b></li>
+            <li><b>修复部分问题</b></li>
+        </ul>
+    ]]></change-notes>
 
     <!-- Extension points defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
