--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -42,12 +42,14 @@
     <li>支持生成列表返回结果，可选择是否包含 Mock 数据。</li>
     <li>支持生成请求体对象 JSON，可选择是否包含 Mock 数据。</li>
     </ol>
-
     <b>Note / 注意：</b><br>
-    Mock 数据的生成依赖大语言模型（LLM）支持，请在设置中配置 API Key。<br>
-        <b>支持额外参数配置，有些设计会在拦截器中拦截部分参数，可添加路径匹配，为特定路径添加固定参数</b> <br>
+    <b>请求的路径参数和拼接参数备注信息由注释文档的@param 处读取，请完善注释文档，请使用/** */ 注释。</b><br>
+    <b>接受参数为对象类型，备注信息从对象属性的注解读取，请使用/** */ 注释。</b><br>
+    <b>对于Map类型的参数无法支持，静态情况下获取不到参数信息。</b><br>
+    <b>Mock 数据的生成依赖大语言模型（LLM）支持，请在设置中配置 API Key。</b><br>
+    <b>支持额外参数配置，有些设计会在拦截器中拦截部分参数，可添加路径匹配，为特定路径添加固定参数</b> <br>
     <b>参数示例：</b><br>
-   <ol><li><b>
+   <ol><li><b>```json
                 {
                     "pathMatch" : "/api/**",
                     "extraParams" : [
@@ -76,7 +78,8 @@
                         "desc":"访问令牌"
                       }
                     ]
-                }0
+                }
+                ```
     </b></li></ol>
     配置路径：<b>Settings -> Tools -> yapi_setting</b> <br>
     </em>
